--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -1,10 +1,10 @@
-<!DOCTYPE hmtl>
+<!DOCTYPE html>
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
         <meta name="viewport" content="width=device-width , initial-scale=1.0"/>
         <link rel="stylesheet" href="styles/layout.css">
-        <title>Ivan Dekportor  WDD131</title>
+        <title>Ivan Dekportor | WDD131</title>
     </head>
     <body>
         <header>
