--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
                 <h2>Skills</h2>
                 <div class="skills-container">
                     <ul>
-                        <li>HTML5</li>
+                        <li><a>HTML5</a></li>
                         <li>Css</li>
                         <li>JavaScriipt</li>
-                        <li>Pyhton</li>
-                        <li>C#</li>
+                        <li><a>Python</a></li>
+                        <li><a>C#</a></li>
                         <li>C++</li>
                         <li>Excel/Google sheet</li>
                     </ul> 
