--- a/week02/media-query.html
+++ b/week02/media-query.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="uft-8">
+        <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
         <meta name="author" content="Ivan Dekportor">
         <meta name="description" content="media query learning activity page.">
@@ -11,7 +11,7 @@
         <link rel="stylesheet" href="styles/media-query.css">
         <link rel="stylesheet" href="styles/media-query-large.css">
         <script src="" defer></script>
-        <title></title>
+        <title>Media Query</title>
     </head>
     <body>
         <header>
