--- a/place.html
+++ b/place.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="">
+        <meta name="description" content="Explore Ghana’s rich culture, history, and vibrant cities in this ultimate guide to the heart of West Africa.">
         <meta name="author" content="Ivan Dekportor">
         <link rel="stylesheet" href="styles/place.css">
         <link rel="stylesheet" href="styles/place-large.css">
