--- a/form.html
+++ b/form.html
@@ -18,14 +18,13 @@
             <h1>Product Review</h1>
         </header>
         <main>
-            <form method="get" action="review.html" class="form" required>
-                <label for="products">
+            <form method="get" action="review.html" class="form">
                     <div class="label required">Product Name</div>
                     <select id="products" name="Productreview" required>
                         <option value="" disabled selected >Please choose a product</option>   
                     </select>  
-                <div class="label required">Overall Rating</div>
-                <div class="radio-container" >
+                    <div class="label required">Overall Rating</div>
+                   <div class="radio-container" >
                     <div>
                         <label for="Rating">⭐</label>
                         <input type="radio" name="Rating" value="1" required>
