--- a/form.html
+++ b/form.html
@@ -27,27 +27,27 @@
                    <div class="radio-container" >
                     <div>
                         <label for="Rating">⭐</label>
-                        <input type="radio" name="Rating" value="1" required>
+                        <input type="radio"  id="Rating" name="Rating" value="1" required>
                     </div>
                     <div>
                         <label for="Rating">⭐⭐</label>
-                        <input type="radio" name="Rating" value="2" >
+                        <input type="radio"  id="Rating" name="Rating" value="2" >
                     </div>
                     <div>
                         <label for="Rating">⭐⭐⭐</label>
-                        <input type="radio" name="Rating" value="3" >
+                        <input type="radio"  id="Rating" name="Rating" value="3" >
                     </div>
                     <div>
                         <label for="Rating">⭐⭐⭐⭐</label>
-                        <input type="radio" name="Rating" value="4" >
+                        <input type="radio"  id="Rating" name="Rating" value="4" >
                     </div>
                     <div>
                         <label for="Rating">⭐⭐⭐⭐⭐</label>
-                        <input type="radio" name="Rating" value="5" >
+                        <input type="radio"  id="Rating" name="Rating" value="5" >
                     </div>
                 </div>
                 <div class="label required">Date of Installation</div>
-                <label for="Installation"><Input type="date" name="Installationdate" id="Installation" required></label>
+                <label for="Installation"><input type="date" name="Installationdate" id="Installation" required></label>
                 <div class="label">Which feature did yo find useful in the porducts?<br>(check all that apply)</div>    
                 <label for="feature1" class="label"><input type="checkbox" id="feature1" value="Durability" name="feature"> Durability</label>
                 <label for="feature2" class="label"><input type="checkbox" id="feature2" value="Ease of Use" name="feature"> Ease of Use</label>
@@ -57,7 +57,7 @@
                 <label for="comment"><textarea id="comment" name="user-comment" placeholder="Enter your comment here"></textarea></label>
                 <div class="label">Your Name<span>(optional)</span></div>
                 <label for="name"><input type="text" id="name" name="name" placeholder="Enter your name here"></label>
-                <input type="submit" value="Post review"></input>
+                <input type="submit" value="Post review">
             </form>
         </main>
         <footer>
