--- a/form.html
+++ b/form.html
@@ -19,31 +19,32 @@
         </header>
         <main>
             <form method="get" action="review.html" class="form">
-                    <div class="label required">Product Name</div>
+                    <label class="label ">Product Name
                     <select id="products" name="Productreview" required>
                         <option value="" disabled selected >Please choose a product</option>   
-                    </select>  
+                    </select>
+                    </label>  
                     <div class="label required">Overall Rating</div>
                    <div class="radio-container" >
                     <div>
-                        <label for="Rating">⭐</label>
-                        <input type="radio"  id="Rating" name="Rating" value="1" required>
+                        <label for="Rating1">⭐</label>
+                        <input type="radio"  id="Rating1" name="Rating" value="1" required>
                     </div>
                     <div>
-                        <label for="Rating">⭐⭐</label>
-                        <input type="radio"  id="Rating" name="Rating" value="2" >
+                        <label for="Rating2">⭐⭐</label>
+                        <input type="radio"  id="Rating2" name="Rating" value="2" >
                     </div>
                     <div>
-                        <label for="Rating">⭐⭐⭐</label>
-                        <input type="radio"  id="Rating" name="Rating" value="3" >
+                        <label for="Rating3">⭐⭐⭐</label>
+                        <input type="radio"  id="Rating3" name="Rating" value="3" >
                     </div>
                     <div>
-                        <label for="Rating">⭐⭐⭐⭐</label>
-                        <input type="radio"  id="Rating" name="Rating" value="4" >
+                        <label for="Rating4">⭐⭐⭐⭐</label>
+                        <input type="radio"  id="Rating4" name="Rating" value="4" >
                     </div>
                     <div>
-                        <label for="Rating">⭐⭐⭐⭐⭐</label>
-                        <input type="radio"  id="Rating" name="Rating" value="5" >
+                        <label for="Rating5">⭐⭐⭐⭐⭐</label>
+                        <input type="radio"  id="Rating5" name="Rating" value="5" >
                     </div>
                 </div>
                 <div class="label required">Date of Installation</div>
